Fix for route pathFor and better method management for editing events.

--- a/imports/ui/components/events/modals/addEditEventModal.html
+++ b/imports/ui/components/events/modals/addEditEventModal.html
@@ -14,8 +14,8 @@
                 <select name="type" class="form-control">
                   <option selected="{{selectedValue event.type 'Birthday' }}" value="Birthday">Birthday</option>
                   <option selected="{{selectedValue event.type 'Corporate' }}" value="Corporate">Corporate</option>
-                  <option selected="{{selectedValue event.type 'Birthday' }}" value="Birthday">Team Lunch</option>
-                  <option selected="{{selectedValue event.type 'Corporate' }}" value="Corporate">After Hours Social</option>
+                  <option selected="{{selectedValue event.type 'Team Lunch' }}" value="Team Lunch">Team Lunch</option>
+                  <option selected="{{selectedValue event.type 'After Hours Social' }}" value="After Hours Social">After Hours Social</option>
                 </select>
               </div>
               <div class="col-xs-12 col-sm-3">
