--- a/imports/ui/components/events/modals/addEditEventModal.html
+++ b/imports/ui/components/events/modals/addEditEventModal.html
@@ -11,7 +11,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-4">
                 <label for="type">Event Type</label>
-                <select name="type" class="form-control">
+                <select id="eventOptions" name="type" class="form-control">
                   <option selected="{{selectedValue event.type 'Birthday' }}" value="Birthday">Birthday</option>
                   <option selected="{{selectedValue event.type 'Corporate' }}" value="Corporate">Corporate</option>
                   <option selected="{{selectedValue event.type 'Team Lunch' }}" value="Team Lunch">Team Lunch</option>
